<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.hezaijin.advance.ui.activity.MainActivity">
    <item
        android:id="@+id/action_retrofit"
        android:orderInCategory="100"
        android:title="@string/action_retrofit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_volley"
        android:orderInCategory="100"
        android:title="@string/action_volley"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_okhttp"
        android:orderInCategory="100"
        android:title="@string/action_okhttp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_httputil"
        android:orderInCategory="100"
        android:title="@string/action_httputil"
        app:showAsAction="never"/>
</menu>
